--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,20 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+
+        <spring.version>5.3.15</spring.version>
     </properties>
+
+    <build>
+    </build>
+
+    <dependencies>
+        <!--Spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
