--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,11 @@
         <hibernate-validator.version>6.2.2.Final</hibernate-validator.version>
         <javax-el.version>3.0.1-b12</javax-el.version>
 
+        <tomcat.version>9.0.58</tomcat.version>
+
         <!-- Logging -->
         <logback.version>1.2.10</logback.version>
         <slf4j.version>1.7.35</slf4j.version>
-
     </properties>
 
     <build>
@@ -85,6 +86,20 @@
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.2</version>
+        </dependency>
+
+        <!-- Web -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-servlet-api</artifactId>
+            <version>${tomcat.version}</version>
+<!--            <scope>provided</scope> SpringMain crashes with this line -->
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
         </dependency>
     </dependencies>
 
