--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
         <!-- Spring -->
         <spring.version>5.3.16</spring.version>
+        <spring.security.version>5.6.2</spring.security.version>
         <spring-data-jpa.version>2.6.2</spring-data-jpa.version>
         <jackson.version>2.13.2</jackson.version>
 
@@ -71,6 +72,18 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
             <version>${spring-data-jpa.version}</version>
+        </dependency>
+
+        <!-- Security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
         </dependency>
 
         <!-- DB -->
