--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
 
     <version>1.0-SNAPSHOT</version>
 
+    <name>Voting where to lunch with friends</name>
+    <url>https://github.com/anton-petrunov/friendlylunch</url>
+
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,6 +33,11 @@
         <!-- Logging -->
         <logback.version>1.2.10</logback.version>
         <slf4j.version>1.7.35</slf4j.version>
+
+        <!-- Tests -->
+        <junit.jupiter.version>5.8.2</junit.jupiter.version>
+        <assertj.version>3.22.0</assertj.version>
+        <hamcrest.version>2.2</hamcrest.version>
     </properties>
 
     <build>
@@ -147,7 +155,7 @@
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-servlet-api</artifactId>
             <version>${tomcat.version}</version>
-            <!-- <scope>provided</scope> // SpringMain crashes with this line -->
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -172,6 +180,29 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+
+        <!-- Tests -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!--        https://youtrack.jetbrains.com/issue/IDEA-231927  -->
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>1.8.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
